apps/app_dial.c
@@ -2703,7 +2703,8 @@ static int dial_exec_full(struct ast_channel *chan, const char *data, struct ast
 
 		if (!tc) {
 			/* If we can't, just go on to the next call */
-			ast_log(LOG_WARNING, "Unable to create channel of type '%s' (cause %d - %s)\n",
+			/* Failure doesn't necessarily mean user error. DAHDI channels could be busy. */
+			ast_log(LOG_NOTICE, "Unable to create channel of type '%s' (cause %d - %s)\n",
 				tmp->tech, cause, ast_cause2str(cause));
 			handle_cause(cause, &num);
 			if (!rest) {
@@ -2841,7 +2842,9 @@ static int dial_exec_full(struct ast_channel *chan, const char *data, struct ast
 		AST_LIST_INSERT_TAIL(&out_chans, tmp, node);
 	}
 
-	if (AST_LIST_EMPTY(&out_chans)) {
+	/* As long as we attempted to dial valid peers, don't throw a warning. */
+	/* If a DAHDI peer is busy, out_chans will be empty so checking list size is misleading. */
+	if (!num_dialed) {
 		ast_verb(3, "No devices or endpoints to dial (technology/resource)\n");
 		if (continue_exec) {
 			/* There is no point in having RetryDial try again */
